--- a/style.css
+++ b/style.css
@@ -58,19 +58,32 @@ body{
     max-width: 1200px;
     margin: 0 auto;
 }
-
 .parametro{
     background-color: var(--fundo-texto);
     border: 2px solid var(--borda);
     margin-top: 32px;
     padding: 24px;
 }
-
 .parametro-senha-botoes{
     display: flex;
     justify-content: center;
 }
 
+.parametro-senha__botao{
+    background-color: var(--fundo-texto);
+    color: var(--branco);
+    border: 2px solid var(--borda);
+    padding: 24px;
+    font-size: 24px;
+    cursor:pointer;
+}
+.parametro-senha__texto{
+    padding: 24px;
+    border-top: 2px solid var(--borda);
+    border-bottom: 2px solid var(--borda);
+    margin: 0;
+    font-size: 24px;
+}
 .parametro-titulo{
     font-family: var(--roboto-mono);
     font-size: 28px;
