--- a/style.css
+++ b/style.css
@@ -1,47 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
-:root{
+:root {
     --branco: white;
-    --cor-de-fundo: #20123b;
-    --fundo-senha: #330e64;
-    --fundo-texto: #241442;
-    --borda: #00b7ff;
+    --cor-de-fundo: #00162E;
+    --fundo-senha: #00244D;
+    --fundo-texto: #001E40;
+    --borda: #0075FF;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
 
-*{
+* {
     font-weight: 400;
 }
 
-body{
+body {
     color: var(--branco);
     background-color: var(--cor-de-fundo);
     font-family: var(--roboto);
 }
 
-.titulo-principal{
+.titulo-principal {
     font-family: var(--roboto-mono);
     font-size: 32px;
 }
 
-.titulo-secundario{
+.titulo-secundario {
     font-size: 24px;
 }
 
-.conteudo-titulo{
+.conteudo-titulo {
     text-align: center;
     margin-top: 80px;
 }
 
-.conteudo-senha{
-    margin-top: 80px; 
+.conteudo-senha {
+    margin-top: 80px;
     background: var(--fundo-senha);
     padding: 24px;
     border-bottom: 6px solid var(--borda);
 }
 
-#campo-senha{
+#campo-senha {
     background-color: var(--fundo-senha);
     border: none;
     color: var(--branco);
@@ -50,37 +50,57 @@ body{
     width: 70%;
 }
 
-#campo-senha:focus{
+#campo-senha:focus {
     outline: none;
 }
 
-.conteudo{
+.conteudo {
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.parametro{
+.parametro {
     background-color: var(--fundo-texto);
     border: 2px solid var(--borda);
     margin-top: 32px;
     padding: 24px;
 }
 
-.parametro-senha-botoes{
+.parametro-titulo {
+    font-family: var(--roboto-mono);
+    font-size: 28px;
+}
+
+.parametro-senha__titulo {
+    font-size: 24px;
+}
+
+.parametro-coluna__senha {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.parametro-senha {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.parametro-senha-botoes {
     display: flex;
     justify-content: center;
 }
 
-.parametro-senha__botao{
+.parametro-senha__botao {
     background-color: var(--fundo-texto);
     color: var(--branco);
     border: 2px solid var(--borda);
     padding: 24px;
     font-size: 24px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.parametro-senha__texto{
+.parametro-senha__texto {
     padding: 24px;
     border-top: 2px solid var(--borda);
     border-bottom: 2px solid var(--borda);
@@ -88,38 +108,51 @@ body{
     font-size: 24px;
 }
 
-.parametro-titulo{
-    font-family: var(--roboto-mono);
-    font-size: 28px;
+label {
+    font-size: 20px;
 }
 
-.parametro-senha__titulo{
-    font-size:24px;
-}
-
-.parametro-coluna__senha{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.parametro-senha{
-    width: 50%;
-    margin: 0 auto;
-}
-
-label{
-    font-size: 20-px;
-}
-
-.checkbox{
+.checkbox {
     width: 20px;
     height: 20px;
     cursor: pointer;
 }
 
+.barra {
+    background-color: var(--fundo-senha);
+    height: 30px;
+    width: 100%;
+}
+
+.forca {
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
+
+.fraca {
+    width: 25%;
+    background-color: #E71B32;
+}
+
+.media {
+    background-color: #FAF408;
+    width: 50%;
+}
+
+.forte {
+    background-color: #00FF85;
+    width: 100%;
+}
+
+.parametro-senha-textos {
+    display: flex;
+    justify-content: space-between;
+}
+
+
 @media screen and (min-width: 768px) {
-    .parametro-coluna__senha{
+    .parametro-coluna__senha {
         flex-direction: row;
     }
 }
